--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <body>
 
-<p>If a browser cannot find the image, it will display the alternate text:</p>
+<h3 style="color:Tomato;">Hello World</h3>
 
-<img src="wrongname.gif" alt="Flowers in Chania">
+<p style="color:DodgerBlue;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+
+<p style="color:MediumSeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 
 </body>
 </html>
