--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mark Dorriesfield<title>
+<title>Mark Dorriesfield</title>
 
 </head>
 <body>
@@ -12,7 +12,7 @@
 	<li><a href="gallery.html">Photo Gallery</a></li>
 </ul>
 
-<h1>Work Experience</h1>
+<h1>Hello my name is Mark</h1>
 <p>My first paragraph.</p>
 
 </body>
