--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 <title>Mark Dorriesfield</title>
+
+<link rel="stylesheet" href="mystyle.css">
+
 </head>
 <body>
 
