--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 <title>Mark Dorriesfield</title>
 
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mycss.css">
 
 </head>
 <body>
