--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
 <title>Mark Dorriesfield</title>
 
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mycss.css">
 	
 </head>
 <body>
