--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
 	
 <title>Mark Dorriesfield</title>
 
-<link rel="stylesheet" href="mycss.css">
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #dddddd;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
+li a {
+  display: block;
+  padding: 8px;
+}
+
+body {
+  background-color: blue
+  }
+	
+<!--link rel="stylesheet" href="mycss.css"-->
+
+</style>
 </head>
 <body>
 
