--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+<link rel = "stylesheet"
+	type = "text/css"
+	href = "mycss.css/>	
 <title>Mark Dorriesfield</title>
-
-<link rel="stylesheet" href="mycss.css">
 
 </head>
 <body>
