--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel = "stylesheet"
+	type = "text/css"
+	href = "mycss.css
+/>
 <title>Mark Dorriesfield</title>
-
-<link rel="stylesheet" href="mycss.css">
 	
 </head>
 <body>
