--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel = "stylesheet"
-	type = "text/css"
-	href = "mycss.css
-/>
+<link rel = "stylesheet" type = "text/css" href = "mycss.css"/>
 <title>Mark Dorriesfield</title>
 	
 </head>
