--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel = "stylesheet"
-	type = "text/css"
-	href = "mycss.css/>		
+<link rel = "stylesheet" type = "text/css" href = "mycss.css"/>		
 <title>Mark Dorriesfield</title>
 
 	
