--- a/cv.html
+++ b/cv.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel = "stylesheet" type = "text/css" href = "mycss.css"/>		
-<title>Mark Dorriesfield</title>
+<title>MarkD</title>
+<link rel = "stylesheet"
+	type = "text/css"
+	href = "mycss.css"/>
 
-	
+<!-- from https://www.w3schools.com/css/css_rwd_viewport.asp -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
