--- a/index.html
+++ b/index.html
@@ -2,31 +2,7 @@
 <html>
 <head>
 <title>MarkD</title>
-<!--link rel = "stylesheet"
-	type = "text/css"
-	href = "mycss.css"/-->
-	
-<style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #dddddd;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-li a {
-  display: block;
-  padding: 8px;
-}
-	
-body {
-  background-color: blue;
-  }
-</style
+<link rel = "stylesheet" type = "text/css" href = "mycss.css"/>
 
 <!-- from https://www.w3schools.com/css/css_rwd_viewport.asp -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
