--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <title>MarkD</title>
-<link rel = "stylesheet"
-	type = "text/css"
-	href = "mycss.css"/>
+<link rel = "stylesheet" type = "text/css" href = "mycss.css"/>
 
 <!-- from https://www.w3schools.com/css/css_rwd_viewport.asp -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
