--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MarkD</title>
+<title>MarkD Introduction</title>
 <link rel = "stylesheet" type = "text/css" href = "mycss.css"/>
 
 <!-- from https://www.w3schools.com/css/css_rwd_viewport.asp -->
@@ -17,6 +17,9 @@
 </ul>
 
 <h1>Hello my name is Mark</h1>
+
+<img src="images/toad.jpg" alt="toad">
+
 <p>My first paragraph.</p>
 
 </body>
