--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MarkD CV</title>
+<title>Curriculum vitae</title>
 <link rel = "stylesheet"
 	type = "text/css"
 	href = "mycss.css"/>
@@ -17,11 +17,11 @@
 		<ul class="navbar">
 			<li class="linav"><a href="index.html">Introduction</a></li>
 			<li class="linav"><a href="cv.html">CV</a></li>
-			<li class="linav"><a href="gallery.html">Photo Gallery</a></li>
 		</ul>
 	</div>
 	<div class="banner">
-		<img #="AlamosBanner" src="images/AlamosBanner.jpg" alt="Marsh and Spruce Trees - James Bay, Ontario">
+		<!--5 of 5 unique photographs -->
+		<img class="banner" src="images/AlamosBanner.jpg" alt="Tropical Deciduous Forest">
 	</div>
 	<div class="section" id="skills">
 		<h2 class="sectionheader">Skills</h2>
@@ -77,7 +77,7 @@
 			</ul>
 		</div>
 		<div class="job">
-			<h3 class="jobheader"><span class="jobtitle">Avian Research Technician</span><span class="jobdate">(4 Seasons) Apr-Jul, 2015/16/18/19</span></h3>
+			<h3 class="jobheader"><span class="jobtitle">Avian Research Technician</span><span class="jobdate">(4 Seasons) Apr - Jul 2015/16/18/19</span></h3>
 			<h3 class="employer">Great Basin Bird Observatory</h3>	
 			<ul>
 				<li>Conducted 1400 distance-based point counts in desert, riparian, and montane ecosystems</li>
@@ -125,7 +125,7 @@
 			<h3 class="employer">Manitoba Breeding Bird Atlas/Birds Canada</h3>	
 			<ul>
 				<li>Conducted over 1110 avian point counts in boreal and parkland ecosystems</li>
-				<li>Looked for breeding confirmation of all species possible, on survey or incidentally</li>
+				<li>Looked for breeding confirmation of all species possible, both on survey or incidentally</li>
 			</ul>
 		</div>
 		<div class="job">
@@ -150,7 +150,7 @@
 			</ul>
 		</div>
 		<div class="job">
-			<h3 class="jobheader"><span class="jobtitle">Nature Interpreter</span><span class="jobdate">Nov - Jan 2017/18</span></h3>
+			<h3 class="jobheader"><span class="jobtitle">Nature Interpreter</span><span class="jobdate">Nov 2017 - Jan 2018</span></h3>
 			<h3 class="employer">Monteverde Butterfly Gardens</h3>	
 			<ul>
 				<li>Lead enthusiastic and engaging interpretive tours of our captive insect collection and 4 butterfly gardens to groups of 1-15 tourists</li>
@@ -191,7 +191,7 @@
 			</ul>
 		</div>
 		<div class="job">
-			<h3 class="jobheader"><span class="jobtitle">Doug Tarry Young Ornithologist Workshop/Internship</span><span class="jobdate">Aug 2010/11</span></h3>
+			<h3 class="jobheader"><span class="jobtitle">Doug Tarry Young Ornithologist Workshop/Internship</span><span class="jobdate">(2 Seasons) Aug 2010/11</span></h3>
 			<h3 class="employer">Long Point Bird Observatory, Birds Canada</h3>	
 			<ul>
 				<li>Erected and maintained an array of 13 mist nets</li>
@@ -200,7 +200,7 @@
 			</ul>
 		</div>
 		<div class="job">
-			<h3 class="jobheader"><span class="jobtitle">Assistant Instructor - Birding Course</span><span class="jobdate">Apr - Jun 2010/11</span></h3>
+			<h3 class="jobheader"><span class="jobtitle">Assistant Instructor - Birding Course</span><span class="jobdate">(2 Seasons) Apr - Jun 2010/11</span></h3>
 			<h3 class="employer">Durham College</h3>	
 			<ul>
 				<li>Educated 9-12 beginner birders on skills of bird identification in a classroom setting</li>
