--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!--some inspiration for layout/content (not so much the coding) from friend's website http://www.onshorebirding.com/about.html -->
 	<div class="content">
 		<!--2 of 5 unique photographs -->
-		<img class="GBBOPortrait insertphoto" src="images/DSC_1276REsize2.jpg" alt="Me with a Great Basin Gophersnake on my hat">
+		<img class="GBBOPortrait insertphoto" src="images/GBBOPortrait.jpg" alt="Me with a Great Basin Gophersnake on my hat">
 		<h2 id="aboutme">About Me</h2>
 		<p><strong>Hello there!</strong> My name is Mark Dorriesfield, and I am a field biologist and lifelong naturalist from southern Ontario. 
 		While I love all aspects of the natural world, birding has been my passion since elementary school. This drew ultimately me to attend the 
@@ -33,8 +33,8 @@
 		field job: working with breeding Golden-winged Warblers in eastern Manitoba. The next year was even better, as I hopped on the Manitoba 
 		Breeding Bird Atlas point counting crew. Getting paid to be outside, hike around, count birds, and travel to a new each location each day
 		was a dream come true, and it set my path for close to a decade!</p>
-		<p>Since then, I have spent each of the last 9 spring/summer seasons surveying breeding birds throughout North America. During that time
-		I have travelled extensively in Manitoba, Nevada, and Arizona, and completed almost 3500 avian point counts for environmental NGOs. Once I 
+		<p>Since then, I have spent each of the last <strong>9 seasons</strong> surveying breeding birds throughout North America. During that time
+		I have travelled extensively in Manitoba, Nevada, and Arizona, and completed almost <strong>3500 avian point counts</strong> for environmental NGOs. Once I 
 		was finished school in 2016, this allowed me the freedom to pick up field contracts other times of year, so I have spent 2 seasons surveying 
 		migratory shorebirds on the coast of James Bay in Ontario, and 2 falls monitoring and banding birds on the north shore of Lake Superior.
 		Add to this some one-off seasons, such as small mammal trapping in the mountains of Nevada, pre-development surveys in the GTA,
