--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		Add to this some one-off seasons, such as small mammal trapping in the mountains of Nevada, pre-development surveys in the GTA,
 		and mortality monitoring at a wind farm in southwestern Ontario, and I have accumulated quite the list of experiences (and stories!) along the way.</p>
 		<!--3 of 5 unique photographs -->
-		<img class="GWWA insertphoto" src="images/GWWAwork.jpg" alt="Me processing a Golden-winged Warbler">
+		<img class="GWWA insertphoto" src="images/GWWA.jpg" alt="Me processing a Golden-winged Warbler">
 		<p>During the winters, when fieldwork is scarce in North America, my eyes turned to the wonders of the Neotropics. My first journey to that 
 		part of the world was the winter of 2017-2018, where I volunteered for 2 months leading tours at the Monteverde Butterfly Gardens in Costa Rica.
 		The next year when I was unable to secure a guiding position for the off-season, I decided to travel Ecuador on my own for 2.5 months, 
